--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,17 +1,17 @@
 site_name: My Docs
 theme:
+  features:
+    - search.suggest
+    - search.highlight
+    - search.share
+    - navigation.footer
   name: material
   palette:
-  
-    # Palette toggle for automatic mode
-    - media: "(prefers-color-scheme)"
-      toggle:
-        icon: material/brightness-auto
-        name: Switch to light mode
 
     # Palette toggle for light mode
     - media: "(prefers-color-scheme: light)"
       scheme: default 
+      primary: black
       toggle:
         icon: material/brightness-7
         name: Switch to dark mode
