--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,6 +5,8 @@ theme:
     - search.highlight
     - search.share
     - navigation.footer
+    - content.code.select
+    - content.code.copy
   name: material
   palette:
 
@@ -19,6 +21,25 @@ theme:
     # Palette toggle for dark mode
     - media: "(prefers-color-scheme: dark)"
       scheme: slate
+      primary: amber
+      accent: yellow
       toggle:
         icon: material/brightness-4
         name: Switch to system preference
+extra:
+  generator: false
+  social:
+    - icon: fontawesome/brands/mastodon 
+      link: https://www.vrsen.ai/
+    - icon: fontawesome/brands/github
+      link: https://github.com/VRSEN/agency-swarm
+    - icon: fontawesome/brands/x-twitter
+      link: https://twitter.com/__vrsen__
+markdown_extensions:
+  - pymdownx.highlight:
+      anchor_linenums: true
+      line_spans: __span
+      pygments_lang_class: true
+  - pymdownx.inlinehilite
+  - pymdownx.snippets
+  - pymdownx.superfences
